fix: fixing color contrast on nav buttons

--- a/styles/small.css
+++ b/styles/small.css
@@ -98,12 +98,12 @@ nav {
 
 #nav-menu a.active {
   background-color: var(--secondary-color);
-  color: white;
+  color: black;
 }
 
 #nav-menu a:hover {
   background-color: var(--secondary-color);
-  color: white;
+  color: black;
 }
 
 /* Main Content */
